data/derived/comb/progs/unify/prog7861.ml.out
Characters 69-79:
  | b -> (x, false) 
         ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
